Add: add security module with validation